Fix filename with special characters for Netlify deployment

--- a/client/index.html
+++ b/client/index.html
@@ -31,7 +31,7 @@
     <meta name="robots" content="index, follow">
     
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="https://baldus.sirv.com/Baldus_logo_resized_larger.png">
+    <link rel="icon" type="image/png" href="/baldus-logo.png">
   </head>
   <body>
     <div id="root"></div>
